# bevy_playground

./: Cargo.toml
assets/maps/: ldtk_demo.ldtk  test_map.tmx
assets/maps/ldtk_demo/backups/712302e0-21a0-11f1-837d-87902998fa7e_2026-04-13_21-28-10_crash/: ldtk_demo.ldtk
assets/parallax/: forest_bg.png.import  forest_mid0.png.import  forest_mid1.png.import
assets/tilesets/: base_tileset.aseprite
src/: camera.rs  controller.rs  level.rs  main.rs  player.rs  walls.rs
