[package]
name = "first_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
bevy_ecs = "0.18.1"
rand = "0.10.0"
# rand_chacha = "0.10.0"
avian2d = "0.6"
bevy_ecs_tiled = {version = "0.11", features=["physics", "avian", "debug"]}
bevy-inspector-egui = "0.36.0"
# avian3d = "0.6"
# bevy_fsm = "0.3.0"
# bevy_ecs_tilemap = "0.18.1"
# tiled = "0.15.0"
# thiserror = "2.0.18"
# bytemuck = "1.25.0"
# serde_spanned = "1.1.1"
# serde = "1.0.228"
# log = "0.4.29"
# crevice = "0.19.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

